--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 After initializing & updating all the submodules (dont forget the submodules in the vim-folder) create symlinks:
 
-ln -s ~/dotfiles/vim/vimrc ~/.vimrc
-ln -s ~/dotfiles/vim/gvimrc ~/.gvimrc
+mkdir -p ~/.config/nvim
+ln -s ~/dotfiles/vim/init.vim ~/.config/nvim/init.vim
 ln -s ~/dotfiles/zshrc ~/.zshrc
 
