--- a/README
+++ b/README
@@ -2,8 +2,10 @@ After initializing & updating all the submodules (dont forget the submodules in 
 
 mkdir -p ~/.config/nvim
 mkdir -p ~/.config/nvim/plugs
+mkdir -p ~/.config/nvim/colors
 ln -s ~/dotfiles/vim/init.vim ~/.config/nvim/init.vim
 ln -s ~/dotfiles/vim/autoload ~/.config/nvim/autoload
+ln -s ~/dotfiles/smyck/smyck.vim ~/.config/nvim/colors/smyck.vim
 ln -s ~/dotfiles/zshrc ~/.zshrc
 
 Once you start the neovim editor run :PlugInstall to install plugins
